--- a/contact.html
+++ b/contact.html
@@ -90,11 +90,11 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="https://realscane.com/" >Home</a></li>
-							<li><a href="https://realscane.com/#aboutme" target="_blank">About</a></li>
-							<li><a href="https://realscane.com/#membership" target="_blank">Memberships</a></li>
-							<li><a href="https://realscane.com/#press" target="_blank">Press</a></li>
-							<li><a href="https://realscane.com/#socialmedia" target="_blank">Social Media</a></li>
-							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
+							<li><a href="https://realscane.com/#aboutme" >About</a></li>
+							<li><a href="https://realscane.com/#membership" >Memberships</a></li>
+							<li><a href="https://realscane.com/#press" >Press</a></li>
+							<li><a href="https://realscane.com/#socialmedia" >Social Media</a></li>
+							<li><a href="https://shop.realscane.com/" >Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
                         </ul>
                         <a class="menu-trigger">
