--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="#" class="logo">
+                        <a href="https://realscane.com" class="logo">
                             <img src="assets/images/logo.png" alt="InScane"/>
                         </a>
                         <!-- ***** Logo End ***** -->
