--- a/index.html
+++ b/index.html
@@ -179,6 +179,13 @@
     </section>
     <!-- ***** Features Small End ***** -->
 
+  <div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+  <center>
+  Do you have TikTok?? Well InScane is now activly posting on it! Follow him by <a href="https://tiktok.com/@InScaneYT" target="_blank">Clicking Here!</a> 
+  </center>
+  </div>
+		
     <!-- ***** Features Big Item Start ***** -->
     <section class="section padding-top-70 padding-bottom-0" id="aboutme">
         <div class="container">
