--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="#welcome" class="active">Home</a></li>
-                            <li><a href="#aboutme">About</a></li>
-                            <li><a href="#membership">Memberships</a></li>
-                            <li><a href="#press">Press</a></li>
-                            <li><a href="#socialmedia">Social Media</a></li>
+                            <li><a href="https://realscane.com/games">Games</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
                         </ul>
