--- a/contact.html
+++ b/contact.html
@@ -89,12 +89,9 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="https://realscane.com/" >Home</a></li>
-							<li><a href="https://realscane.com/#aboutme" >About</a></li>
-							<li><a href="https://realscane.com/#membership" >Memberships</a></li>
-							<li><a href="https://realscane.com/#press" >Press</a></li>
-							<li><a href="https://realscane.com/#socialmedia" >Social Media</a></li>
-							<li><a href="https://shop.realscane.com/" >Merchandise</a></li>
+                            <li><a href="#welcome" class="active">Home</a></li>
+                            <li><a href="https://realscane.com/games">Games</a></li>
+							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
                         </ul>
                         <a class="menu-trigger">
