--- a/games.html
+++ b/games.html
@@ -69,7 +69,7 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Welcome Area Start ***** -->
-    <div class="game-area" id="Games">
+    <div class="game-area">
 
         <!-- ***** Header Text Start ***** -->
         <div class="header-text">
