--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon" /> 
 	 
-	<link rel="canonical" href="https://realscane.com/contact.html" />
-	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://realscane.com/contact" />
+	<meta name="robots" content="index, contact, games, movies">
 	  
     <title>InScane - Contact Form</title>
 
@@ -89,7 +89,8 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="#welcome" class="active">Home</a></li>
+                            <li><a href="https://realscane.com/" class="active">Home</a></li>
+							<li><a href="https://realscane.com/Movies">Movies</a></li>
                             <li><a href="https://realscane.com/games">Games</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
