--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="/favicon.ico" rel="icon" type="image/x-icon" /> 
 	 
 	<link rel="canonical" href="https://realscane.com" />
-	<meta name="robots" content="index, follow">
+	<meta name="robots" content="index, contact, games, movies">
 	  
     <title>InScanes Official Website</title>
 
@@ -89,7 +89,8 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="#welcome" class="active">Home</a></li>
+                            <li><a href="https://realscane.com/" class="active">Home</a></li>
+							<li><a href="https://realscane.com/Movies">Movies</a></li>
                             <li><a href="https://realscane.com/games">Games</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
