--- a/movies.html
+++ b/movies.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta src="/favicon.png" alt="InScane Logo">
-    <meta name="description" content="InScane has been developing games for a long time! Check out his recent projects!.">
+    <meta name="description" content="Check out all of InScane's Movies and Short Films all in one place!">
     <meta name="author" content="Michael West">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon" /> 
 	 
-	<link rel="canonical" href="https://realscane.com/games" />
+	<link rel="canonical" href="https://realscane.com/movies" />
 	<meta name="robots" content="index, contact, games, movies">
 	   
-    <title>InScanes - Games</title>
+    <title>InScanes - Moivies</title>
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -70,17 +70,13 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Welcome Area Start ***** -->
-    <div class="game-area">
+    <div class="film-area">
 
         <!-- ***** Header Text Start ***** -->
         <div class="header-text">
             <div class="container">
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-						<div class="boxed">
-                        <p>InScane Started Developing games via ROBLOX as a little kid when he discovered ROBLOX Studio.. As of now he has been playing around with Unreal Engine and Unity. Most of his recent projects have between 300,000-500,000 Plays total! Check them out below!</p>
-                        <a target="_blank" href="https://www.roblox.com/groups/4910710/BlackTangent-Studios#!/about" class="main-button-slider">Game Development Studio</a>
-					</div>
                     </div>
                 </div>
             </div>
@@ -89,76 +85,27 @@
     </div>
     <!-- ***** Welcome Area End ***** -->
 
-    <!-- ***** Features Small Start ***** -->
-    <section class="section home-feature">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="row">
-                        <!-- ***** Features Small Item Start ***** -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s">
-                            <div class="features-small-item">
-                                <div class="icon">
-                                    <i><img src="assets/images/featured-item-01.png" alt=""></i>
-                                </div>
-                                <h5 class="features-title">ROBLOX Studio</h5>
-                                <p></p>
-                            </div>
-                        </div>
-                        <!-- ***** Features Small Item End ***** -->
-
-                        <!-- ***** Features Small Item Start ***** -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
-                            <div class="features-small-item">
-                                <div class="icon">
-                                    <i><img src="assets/images/featured-item-01.png" alt=""></i>
-                                </div>
-                                <h5 class="features-title">Unreal Engine</h5>
-                                <p></p>
-                            </div>
-                        </div>
-                        <!-- ***** Features Small Item End ***** -->
-
-                        <!-- ***** Features Small Item Start ***** -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
-                            <div class="features-small-item">
-                                <div class="icon">
-                                    <i><img src="assets/images/featured-item-01.png" alt=""></i>
-                                </div>
-                                <h5 class="features-title">Unity&nbsp;</h5>
-                                <p></p>
-                            </div>
-                        </div>
-                        <!-- ***** Features Small Item End ***** -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-		
-  <div class="alert">
+  
+  <div class="alert-2">
  	 <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  	<center>
- 	 Please Note that this part of the Website is still currently under development and is currently not 100% perfect.
- 	 </center>
 	  <center>
-		  Please Check back later! Thank you :)
+		  Nothing to See Here :)
 		 </center>
   </div>
 		
     <!-- ***** Blog Start ***** -->
-    <section class="section" id="roblox">
+    <section class="section" id="short-films">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">ROBLOX Games</h2>
+                        <h2 class="section-title">Short Films</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>Interested in playing or checking out InScane's Recent or popular games?? Well check them out below!.</p>
+                        <p>InScane started producing Short Films in his TV & Media Production Class at his Secondary High School. He shared most of his work he created within his Social Media.. Check out his recent work below!</p>
                     </div>
                 </div>
             </div>
@@ -168,39 +115,26 @@
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="blog-post-thumb">
                         <div class="img">
-                            <img src="assets/images/CamSim2.jpg" alt="">
+                            <img src="assets/images/mylife.jpg" alt="">
                         </div>
                         <div class="blog-content">
                             <h3>
-                                <a href="#" target="_blank">Camera Simulator 2</a>
+                                <a href="https://www.youtube.com/watch?v=ahHI49cfZEg" target="_blank">My Life</a>
                             </h3>
-                            <a href="#" target="_blank" class="main-button">Coming Soon</a>
+                            <a href="https://www.youtube.com/watch?v=ahHI49cfZEg" target="_blank" class="main-button">Watch on <i class="fa fa-youtube-play"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="blog-post-thumb">
                         <div class="img">
-                            <img src="assets/images/CamSim.jpg" alt="">
+                            <img src="assets/images/downtown.jpg" alt="">
                         </div>
                         <div class="blog-content">
                             <h3>
-                                <a href="https://www.roblox.com/games/3165262762/Camera-Simulator" target="_blank">Camera Simulator</a>
+                                <a href="https://www.youtube.com/watch?v=YKHzmuc-QHg" target="_blank">Downtown</a>
                             </h3>
-                            <a href="https://www.roblox.com/games/3165262762/Camera-Simulator" target="_blank" class="main-button">Play Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="blog-post-thumb">
-                        <div class="img">
-                            <img src="assets/images/FishingSim.jpg" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <h3>
-                               <a href="https://www.roblox.com/games/2634809832/10k-VISITS-Fishing-Simulator" target="_blank">Fishing Simulator</a>
-                            </h3>
-                            <a href="https://www.roblox.com/games/2634809832/10k-VISITS-Fishing-Simulator" target="_blank" class="main-button">Play Now</a>
+                            <a href="https://www.youtube.com/watch?v=YKHzmuc-QHg" target="_blank" class="main-button">Watch on <i class="fa fa-youtube-play"></i></a>
                         </div>
                     </div>
                 </div>
@@ -208,36 +142,36 @@
         </div>
     </section>
 		
-	<section class="section" id="unreal">
+	<section class="section" id="cameos">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">Unreal Engine - Games</h2>
+                        <h2 class="section-title">Cameos / Skits</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>As of Currently, there is no public released games made thru Unreal Engine.</p>
+                        <p>As of Currently, there is no public released Cameos or Skits at this time.</p>
                     </div>
                 </div>
             </div>
 		</div>
 	</section>
 		
-		<section class="section" id="unity">
+		<section class="section" id="movies">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">Unity - Games</h2>
+                        <h2 class="section-title">Movies</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>As of Currently, there is no public released games made thru Unity.</p>
+                        <p>As of Currently, there is no public released Movies at this time.</p>
                     </div>
                 </div>
             </div>
@@ -253,7 +187,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="social">
-                        <li><a href="https://facebook.com/InScaneYT" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://facebook.com/InScaneYT" target="_blank"><i class="fa fa-facebook"></i></a> </li>
                         <li><a href="https://twitter.com/inscaneyt" target="_blank"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="https://instagram.com/inscaneyt" target="_blank"><i class="fa fa-instagram">
 						</i></a></li>
