--- a/games.html
+++ b/games.html
@@ -55,7 +55,7 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="https://realscane.com/" class="active">Home</a></li>
-							<li><a href="https://realscane.com/Movies">Movies</a></li>
+							<li><a href="https://realscane.com/movies">Movies</a></li>
                             <li><a href="https://realscane.com/games">Games</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
