--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 	  
 	  <!-- ***** InScane Schema End ***** -->
 	  
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4220672734045507"
+      crossorigin="anonymous"></script>
+
     </head>
     
     <body>
