--- a/index.html
+++ b/index.html
@@ -391,9 +391,22 @@
                         </div>
                         <div class="blog-content">
                             <h3>
-                                <a href="https://youtube.fandom.com/wiki/InScane" target="_blank">InScane - Wikitubia</a>
+                                <a href="https://youtube.fandom.com/wiki/InScane" target="_blank">InScane - Wikitubia Article</a>
                             </h3>
                             <a href="https://youtube.fandom.com/wiki/InScane" target="_blank" class="main-button">Read Article</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="blog-post-thumb">
+                        <div class="img">
+                            <img src="assets/images/Wikitubia.png" alt="">
+                        </div>
+                        <div class="blog-content">
+                            <h3>
+                                <a href="https://youtube.fandom.com/wiki/Wikitubia:Interviews/InScane" target="_blank">InScane - Wikitubia Interview</a>
+                            </h3>
+                            <a href="https://youtube.fandom.com/wiki/Wikitubia:Interviews/InScane" target="_blank" class="main-button">Read Interview</a>
                         </div>
                     </div>
                 </div>
