--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@ h<!DOCTYPE html>
                             <li><a href="https://realscane.com/games">Games</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
-                            <li><a href="https://astrowm.com/" target="_blank">Hosting Company</a></li>
                         </ul>
-						 <marquee> Within the next few InScane will resume Live Streaming and uploading videos on YouTube! Check out his YouTube Channel by <a href="https://youtube.com/inscane" target="_blank">Clicking Here!</a> -- InScane has officially moved into College but is exspirenicing Internet issues which he is waiting for IT to fix before he is able to continue making content for the community.</marquee>
+						 <marquee> </a> Welcomne to the Official InScane Website! Get the latest news and updates here and on InScnae's Twitter <a href="https://twitter.com/inscaneyt" target="_blank">@inscaneyt</a></marquee>
 						<!-- ***** Navigation Menu Scroll Text ***** -->
 				<!--		<marquee direction="left" height="37" width="1107" bgcolor="transparent">Welcome to the Official InScane Website! Get the latest news, updates, information, and announcements all in one place! -- New Streaming Platform? Yes!! Come join InScane on <a href="https://trovo.live/InScane" target="_blank">Trovo</a> and join the streaming adventure on other platforms! -- Summer Merchandise Drops will be out Late June or even Early July, get ready and get hyped for the new merch drops! -- As a Huge Announcement, InScane will be officially Graduating High School on 6/11/2021 and officially moving on as a College Student attending Curry College in the fall semester in Augest. Huge Congradulations, and let the future bring more enjoyment and fun.</marquee> -->
                         <a class="menu-trigger">
