--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-h<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -98,7 +98,7 @@ h<!DOCTYPE html>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
                         </ul>
-						 <marquee> </a> Welcomne to the Official InScane Website! Get the latest news and updates here and on InScnae's Twitter <a href="https://twitter.com/inscaneyt" target="_blank">@inscaneyt</a></marquee>
+						 <marquee> </a> Welcomne to the Official InScane Website! Get the latest news and updates here and on InScnae's Twitter <a href="https://twitter.com/inscaneyt" target="_blank">@inscaneyt</a> - InScane officially released the official ScaneSMP on 1/1/2022! Join his <a href="https://discord.gg/3EVYgRFV" target="_blank">Discord</a> to get the latest news and information on the Minecraft SMP</marquee>
 						<!-- ***** Navigation Menu Scroll Text ***** -->
 				<!--		<marquee direction="left" height="37" width="1107" bgcolor="transparent">Welcome to the Official InScane Website! Get the latest news, updates, information, and announcements all in one place! -- New Streaming Platform? Yes!! Come join InScane on <a href="https://trovo.live/InScane" target="_blank">Trovo</a> and join the streaming adventure on other platforms! -- Summer Merchandise Drops will be out Late June or even Early July, get ready and get hyped for the new merch drops! -- As a Huge Announcement, InScane will be officially Graduating High School on 6/11/2021 and officially moving on as a College Student attending Curry College in the fall semester in Augest. Huge Congradulations, and let the future bring more enjoyment and fun.</marquee> -->
                         <a class="menu-trigger">
@@ -278,7 +278,7 @@ h<!DOCTYPE html>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="count-item">
-                            <strong>335,000</strong>
+                            <strong>350,000</strong>
                             <span>Game Visits</span>
 							<script>showCount()</script>
                         </div>
@@ -552,7 +552,7 @@ h<!DOCTYPE html>
 		 </div>
 		</section>
             <!-- ***** Section Title End ***** -->
-			<>
+
 			<!-- ***** Instagram Feed Start ***** -->
 
 <div class="powr-instagram-feed" id="869f120a_1620649875"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
