--- a/contact.html
+++ b/contact.html
@@ -89,11 +89,11 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="https://realscane.com/" class="active">Home</a></li>
+                            <li><a href="https://realscane.com/">Home</a></li>
 							<li><a href="https://realscane.com/movies">Movies</a></li>
                             <li><a href="https://realscane.com/games">Games</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
-							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
+							<li><a href="https://realscane.com/contact" class="active">Contact Us</a></li>
                         </ul>
                         <a class="menu-trigger">
                             <span>Menu</span>
