--- a/games.html
+++ b/games.html
@@ -54,9 +54,9 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="https://realscane.com/" class="active">Home</a></li>
+                            <li><a href="https://realscane.com/">Home</a></li>
 							<li><a href="https://realscane.com/movies">Movies</a></li>
-                            <li><a href="https://realscane.com/games">Games</a></li>
+                            <li><a href="https://realscane.com/games" class="active">Games</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
                         </ul>
@@ -150,6 +150,34 @@
     <section class="section" id="roblox">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
+             <div class="row">
+                <div class="col-lg-12">
+                    <div class="center-heading">
+                        <h2 class="section-title">Minecraft - ScaneSMP</h2>
+                    </div>
+                </div>
+                <div class="offset-lg-3 col-lg-6">
+                    <div class="center-text">
+                        <p>The Official ScaneSMP has been officially announced and released to the public as of 1/1/2022 as a happy New Years gift to the InScane Community!</p>
+                    </div>
+                </div>
+            </div>
+            <!-- ***** Section Title End ***** -->
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="blog-post-thumb">
+                        <div class="img">
+                            <img src="assets/images/ScaneSMP.jpg" alt="">
+                        </div>
+                        <div class="blog-content">
+                            <h3>
+                                <a href="#" target="_blank">ScaneSMP</a>
+                            </h3>
+                            <a href="#" target="_blank" class="main-button">Join Today!</a>
+                        </div>
+                    </div>
+                </div>
+
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
