--- a/movies.html
+++ b/movies.html
@@ -54,8 +54,8 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="https://realscane.com/" class="active">Home</a></li>
-							<li><a href="https://realscane.com/movies">Movies</a></li>
+                            <li><a href="https://realscane.com/">Home</a></li>
+							<li><a href="https://realscane.com/movies" class="active">Movies</a></li>
                             <li><a href="https://realscane.com/games">Games</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
