--- a/truck.html
+++ b/truck.html
@@ -58,7 +58,7 @@
   <body>
       <center>
     <h1 class="w3-center">2013 GMC Sierra 1500 [4WD] | 140,400 Miles | $19,900</h1>
-    <a href="https://streamelements.com/inscane/tip" class="main-button-slider" target="_blank">Donate :)</a>
+    <a href="https://paypal.me/NotInScaneYT?country.x=US&locale.x=en_US" class="main-button-slider" target="_blank">Donate :)</a>
     <h1 class="w3-center"> 
 
     </h1>
