--- a/truck.html
+++ b/truck.html
@@ -57,7 +57,7 @@
   </style>
   <body>
       <center>
-    <h1 class="w3-center">2013 GMC Sierra 1500 [4WD] | 140,400 Miles | $19,900</h1>
+    <h1 class="w3-center">2016 Chevrolet Silverado 1500 | 93,999 Miles | $30,900</h1>
     <a href="https://paypal.me/NotInScaneYT?country.x=US&locale.x=en_US" class="main-button-slider" target="_blank">Donate :)</a>
     <h1 class="w3-center"> 
 
@@ -65,62 +65,63 @@
     <h1 class="w3-center"> 
 
     </h1>
+    <center>
     <div class="carousel" data-flickity='{ "wrapAround": true, "autoPlay": true, "imagesLoaded":true }'>
       <div class="carousel-cell">
-          <img class="w3-image" src="hhttps://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696740302300.jpg">
+          <img class="w3-image" src="">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696740765360.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077515089330.jpg">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696741222430.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077515559760.jpg">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696741677330.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077516026970.jpg">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696742147840.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077516494790.jpg">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696742605580.jpg">
-      </div>
-
-      <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696743069480.jpg">
-      </div>
-      <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696743540710.jpg">
-      </div>
-      <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696744008380.jpg">
-      </div>
-      <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696744470560.jpg">
-      </div>
-      <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696744919490.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077516970380.jpg">
       </div>
 
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696745384110.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077517441430.jpg">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696745836910.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077517921080.jpg">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696746287050.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077518402770.jpg">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696746751130.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077518877640.jpg">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696747202540.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077519326020.jpg">
+      </div>
+
+      <div class="carousel-cell">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077519789090.jpg">
       </div>
       <div class="carousel-cell">
-        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/18112897/637699696747678730.jpg">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077520241160.jpg">
+      </div>
+      <div class="carousel-cell">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077520702000.jpg">
+      </div>
+      <div class="carousel-cell">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077521156640.jpg">
+      </div>
+      <div class="carousel-cell">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077521615430.jpg">
+      </div>
+      <div class="carousel-cell">
+        <img class="w3-image" src="https://imagescdn.dealercarsearch.com/Media/12663/17678458/637596077522553630.jpg">
       </div>
     </div>
-
+</center>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
