--- a/truck.html
+++ b/truck.html
@@ -58,7 +58,7 @@
   <body>
       <center>
     <h1 class="w3-center">2016 Chevrolet Silverado 1500 | 93,999 Miles | $30,900</h1>
-    <a href="https://paypal.me/NotInScaneYT?country.x=US&locale.x=en_US" class="main-button-slider" target="_blank">Donate :)</a>
+    <a href="https://paypal.me/ISEYT" class="main-button-slider" target="_blank">Donate :)</a>
     <h1 class="w3-center"> 
 
     </h1>
